@@ -5,6 +5,8 @@ lintian-brush (0.71) UNRELEASED; urgency=medium
   * Add support for reading upstream metadata from pom.xml.
   * Convert private VCS URLs to public URLs, e.gg. on salsa or GitHub.
   * maintainer-script-without-set-e: Improve spacing.
+  * uses-debhelper-compat-file: support debhelper dependencies in Build-
+    Depends-Indep or Build-Depends-Arch.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 09 Jun 2020 18:18:59 +0000
 
